// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders Disabled Input correctly 1`] = `
<div>
  <input
    class="zw-input zw-input--md zw-input--radius zw-input--disabled zw-input--with-bordered"
    disabled=""
    type="text"
    value="禁用"
  />
</div>
`;

exports[`Input renders Input with radius correctly 1`] = `
<div>
  <input
    class="zw-input zw-input--md zw-input--radius zw-input--with-bordered"
    placeholder="请输入"
    type="text"
    value=""
  />
</div>
`;

exports[`Input renders correctly with initial value 1`] = `
<div>
  <Input
    bordered={true}
    onChange={[MockFunction]}
    prefixCls="zw-input"
    shape="radius"
    type="text"
    value="hey"
  />
</div>
`;

exports[`Input renders different sizes of Input correctly 1`] = `
<div>
  <input
    class="zw-input zw-input--lg zw-input--radius zw-input--with-bordered"
    placeholder="请输入"
    type="text"
    value=""
  />
  <input
    class="zw-input zw-input--md zw-input--radius zw-input--with-bordered"
    placeholder="请输入"
    type="text"
    value=""
  />
  <input
    class="zw-input zw-input--sm zw-input--radius zw-input--with-bordered"
    placeholder="请输入"
    type="text"
    value=""
  />
</div>
`;

exports[`Input renders different types of Input correctly 1`] = `
<div>
  <input
    class="zw-input zw-input--md zw-input--radius zw-input--with-bordered"
    placeholder="请输入"
    type="text"
    value=""
  />
  <div
    class="zw-input__wrapper zw-input--textarea"
  >
    <textarea
      class="zw-input zw-input--radius zw-input--with-bordered"
      placeholder="请输入"
      type="textarea"
    />
  </div>
</div>
`;
